--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,15 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "prisma": "^6.18.0",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2"
   }
 }
