feat: implement Google authentication and update user model

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "apple-signin-auth": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "google-auth-library": "^10.4.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
