feat: implement password reset functionality with email notifications

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@sendgrid/mail": "^8.1.6",
     "apple-signin-auth": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -24,6 +25,7 @@
     "google-auth-library": "^10.4.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "zod": "^4.1.12"
   },
