--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "db:seed": "prisma db seed"
+    "db:seed": "prisma db seed",
+    "db:seed:dummy": "node prisma/seedDummyProducts.js"
   },
   "keywords": [],
   "author": "",
