--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
+    "twilio": "^5.10.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
